--- a/yaml/win11/v1/testng_hyperexecute_autosplit_sample.yaml
+++ b/yaml/win11/v1/testng_hyperexecute_autosplit_sample.yaml
@@ -3,10 +3,10 @@ version: 0.1
 runson: win11
 
 autosplit: true
-concurrency: 4
+concurrency: 1
 env:
-  LT_ENV: ${LT_ENV}
-  hub: "${HUB_URL}"
+    LT_ENV: ${LT_ENV}
+    hub: "${HUB_URL}"
 
 runtime:
   language: java
@@ -24,9 +24,7 @@ testDiscovery:
   mode: static
   command: grep 'test name' xml/testng_win11.xml | awk '{print$2}' | sed 's/name=//g' | sed 's/\x3e//g'
 
-testRunnerCommand: mvn test `-Dplatname=win `-Dmaven.repo.local=./.m2 dependency:resolve `-DselectedTests=$test
+testRunnerCommand: mvn test `-Dplatname=win11 `-Dmaven.repo.local=./.m2 dependency:resolve `-DselectedTests=$test
 
-retryOnFailure: true
-maxRetries: 1
 
 jobLabel: [selenium-testng, win11, v1, autosplit]
